feat(state): calculate the average availability score
